--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  justify-content: space-between;
+}
+
+.btnWrap {
+  display: flex;
+  align-items: center;
 }
 
 .deleteBtn {
-  /* width: 40px; */
   height: 20px;
 }
